# concordance

./: .dir-locals.el  .gitignore  CMakeLists.txt  Changelog  CodingStyle  INSTALL.linux  INSTALL.mac  INSTALL.windows  Makefile  README.md  ReleaseChecklist  ReleaseChecklist.md  SubmittingPatches  SupportedModels.md  TODO  supported_models.html
.github/: dependabot.yml
.github/workflows/: check-all-checks.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
concordance/: CMakeLists.txt  INSTALL.linux  INSTALL.mac  INSTALL.windows  Makefile.am  README  TODO  concordance.1  concordance.c  concordance.cpp  configure.ac
concordance/win/: concordance.dsp  concordance.nsi  concordance.vcproj  concordance.vcxproj  make_installer.py  make_wheel.py  mingw-curl-spec-changes.sed  setup.py.win32-wheel
concordance/win/getopt/: README  getopt.c  getopt1.c
consnoop/: Makefile  consnoop.cpp
consnoop/win/: consnoop.dsp  consnoop.vcproj  consnoop.vcxproj
libconcord/: CMakeLists.txt  Changelog  INSTALL.linux  INSTALL.mac  INSTALL.windows  Makefile.am  README  binaryfile.cpp  binaryfile.h  concordance.h  configure.ac  gen_udev_support  hid.h  lc_internal.h  libconcord.cpp  libconcord.h  libconcord.xml  libhidapi.cpp  libusbhid.cpp  operationfile.cpp  operationfile.h  protocol.h  protocol_z.h  remote.cpp  remote.h  remote_info.h  remote_mh.cpp  remote_z.cpp  start_concordance_dhcpd.sh  start_concordance_dhcpd_wrapper.sh  usblan.cpp  usblan.h  web.cpp  web.h  xml_headers.h
libconcord/bindings/perl/: Makefile.PL  README  concord.i  test.pl
libconcord/bindings/python/: README  libconcord.py  setup.py
libconcord/libusb/: libusbhid.cpp
libconcord/libusb/win/: libusb_dyn.c  usb.h
libconcord/mac/libusbshieldlibconcord.kext/: Info.plist
libconcord/remote_z_learn/: base.cpp  base.h  binary.h  data.cpp  data.h  single.cpp  single.h  start.h  stop.h  stream.cpp  stream.h
libconcord/win/: harmony_libusb.dsp  harmony_libusb.vcproj  harmony_winhid.dsp  harmony_winhid.vcproj  libconcord.def  libconcord_libusb.dsp  libconcord_libusb.vcproj  libconcord_libusb.vcxproj  libconcord_winhid.dsp  libconcord_winhid.vcproj  libconcord_winhid.vcxproj  usb_rtl.cpp  usb_rtl.h  winhid.cpp
specs/: README  protocol.txt  protocol_mh.txt  protocol_z.txt
win/: concordance.dsw  concordance.sln
